--- a/src/app/component/admin/admin.component.html
+++ b/src/app/component/admin/admin.component.html
@@ -1,10 +1,8 @@
 <div class="admin-dashboard">
-  <!-- Section: Skills -->
+  <!-- Skills Section -->
   <div class="section-card">
     <h2>🛠 Skills</h2>
-
     <table mat-table [dataSource]="skillsDataSource" class="mat-table">
-
       <ng-container matColumnDef="skillName">
         <th mat-header-cell *matHeaderCellDef> Skill </th>
         <td mat-cell *matCellDef="let s"> {{s.skillName}} </td>
@@ -17,26 +15,23 @@
 
       <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef> Action </th>
-        <td mat-cell *matCellDef="let s">
-          <button class="btn-delete" (click)="deleteSkill(s.id)">✕</button>
+        <td mat-cell *matCellDef="let s" class="action-cell">
+          <mat-icon class="icon-btn edit-icon" (click)="openPopup('skill', s)">edit</mat-icon>
+          <mat-icon class="icon-btn delete-icon" (click)="deleteSkill(s.id)">delete</mat-icon>
         </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="skillsDisplayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: skillsDisplayedColumns;"></tr>
     </table>
-
     <mat-paginator #skillsPaginator [length]="skills.length" [pageSize]="5" [pageSizeOptions]="[5,10,20]"></mat-paginator>
-
     <button class="btn-add" (click)="openPopup('skill')">+ Add Skill</button>
   </div>
 
-  <!-- Section: Job Roles -->
+  <!-- Job Roles Section -->
   <div class="section-card">
     <h2>💼 Job Roles</h2>
-
     <table mat-table [dataSource]="jobRolesDataSource" class="mat-table">
-
       <ng-container matColumnDef="title">
         <th mat-header-cell *matHeaderCellDef> Job Role </th>
         <td mat-cell *matCellDef="let j"> {{j.title}} </td>
@@ -49,26 +44,23 @@
 
       <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef> Action </th>
-        <td mat-cell *matCellDef="let j">
-          <button class="btn-delete" (click)="deleteJobRole(j.id)">✕</button>
+        <td mat-cell *matCellDef="let j" class="action-cell">
+          <mat-icon class="icon-btn edit-icon" (click)="openPopup('jobRole', j)">edit</mat-icon>
+          <mat-icon class="icon-btn delete-icon" (click)="deleteJobRole(j.id)">delete</mat-icon>
         </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="jobRolesDisplayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: jobRolesDisplayedColumns;"></tr>
     </table>
-
-    <mat-paginator   #jobRolesPaginator [length]="jobRoles.length" [pageSize]="5" [pageSizeOptions]="[5,10,20]"></mat-paginator>
-
+    <mat-paginator #jobRolesPaginator [length]="jobRoles.length" [pageSize]="5" [pageSizeOptions]="[5,10,20]"></mat-paginator>
     <button class="btn-add" (click)="openPopup('jobRole')">+ Add Role</button>
   </div>
 
-  <!-- Section: FAQs -->
+  <!-- FAQs Section -->
   <div class="section-card">
     <h2>🤖 Bot FAQs</h2>
-
     <table mat-table [dataSource]="faqDataSource" class="mat-table">
-
       <ng-container matColumnDef="keyword">
         <th mat-header-cell *matHeaderCellDef> Keyword </th>
         <td mat-cell *matCellDef="let f"> {{f.keyword}} </td>
@@ -76,24 +68,25 @@
 
       <ng-container matColumnDef="answer">
         <th mat-header-cell *matHeaderCellDef> Answer </th>
-        <td mat-cell *matCellDef="let f"> {{f.answer}} </td>
+        <td mat-cell *matCellDef="let f" class="answer-cell"> {{f.answer}} </td>
       </ng-container>
 
       <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef> Action </th>
-        <td mat-cell *matCellDef="let f">
-          <button class="btn-delete" (click)="deleteFaq(f.id)">✕</button>
+        <td mat-cell *matCellDef="let f" class="action-cell">
+          <mat-icon class="icon-btn edit-icon" (click)="openPopup('faq', f)">edit</mat-icon>
+          <mat-icon class="icon-btn delete-icon" (click)="deleteFaq(f.id)">delete</mat-icon>
         </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="faqDisplayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: faqDisplayedColumns;"></tr>
     </table>
-
-    <mat-paginator  #faqPaginator [length]="faqs.length" [pageSize]="5" [pageSizeOptions]="[5,10,20]"></mat-paginator>
-
+    <mat-paginator #faqPaginator [length]="faqs.length" [pageSize]="5" [pageSizeOptions]="[5,10,20]"></mat-paginator>
     <button class="btn-add" (click)="openPopup('faq')">+ Add FAQ</button>
   </div>
+
+  <!-- Popup Component -->
   <app-admin-popup-form
     *ngIf="showPopup"
     [title]="popupTitle"
@@ -102,5 +95,3 @@
     (close)="closePopup()">
   </app-admin-popup-form>
 </div>
-
-
